changed  to custom theme

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -10,8 +10,8 @@ $theme-green: #00E7BD;
 // scss-docs-start theme-color-variables
 $primary:       $theme-pink;
 $secondary:     $theme-purple-dark;
-$success:       $theme-green;
-// $info:          $cyan !default;
+// $success:       $green !default;
+$info:          $theme-green;
 // $warning:       $yellow !default;
 // $danger:        $red !default;
 // $light:         $gray-100 !default;
