--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,3 +15,16 @@
     color: black;
     background-color: rgb(0, 255, 170);
 }
+
+/* tools styles */
+
+.tool {
+    font-size: 1.3rem;
+    color:whitesmoke;
+    background-color: rgb(47, 44, 51);
+}
+
+.tool:hover {
+    border: 2px solid rgb(0, 255, 170);
+    background-color: rgb(59, 57, 63);
+}
