--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,3 +66,11 @@ a {
   border: 2px solid rgb(0, 255, 170);
   background-color: rgb(59, 57, 63);
 }
+
+/* tablet and larger only */
+
+@media (min-width:600px) {
+  #brand {
+    margin-left: 25px;
+  }
+}
